# Contacts

./: .gitignore  README.md  check.sh  config.ini  new-contact-template.json  new-contacts-template.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
contacts/: __main__.py  constant.py  parser.py  utils.py
contacts/command/: __init__.py  add.py  dump.py  families.py  load.py  pull.py  push.py  sync_groups.py  tag.py  tag_ls.py  tag_mv.py  tag_repl.py  validate.py
contacts/common/: constant.py  decorator.py  decorator_test.py  error.py  patch.py  singleton.py  singleton_test.py
contacts/common/utils/: dataclasses_utils.py  file_io_utils.py  icloud_utils.py  json_utils.py  pretty_print_utils.py  (+1 more)
contacts/dao/: __init__.py
contacts/fixtures/: contact_fixtures.py
contacts/model/: __init__.py  common.py  contact.py  date.py  date_field.py  enumeration.py  family.py  group.py
contacts/transformer/: __init__.py  contact_to_icloud_contact.py  icloud_contact_to_contact.py  notes.py
contacts/utils/: command_utils.py  contact_utils.py  contact_utils_test.py  dataclasses_utils.py  dataclasses_utils_test.py  file_io_utils.py  file_io_utils_test.py  icloud_utils.py  input_utils.py  json_utils.py  json_utils_test.py  pretty_print_utils.py  progress_utils.py  uuid_utils.py  uuid_utils_test.py  yaml_utils.py
src/common/: dataclasses_utils.py  decorator.py  decorator_test.py  error.py  patch.py
src/contacts/: main.py
src/data/: __init__.py
src/model/: __init__.py  contact.py  date_field.py
src/transformer/: icloud_contact_to_contact.py  notes.py
(+66 files in other folders)
