[project]
name = "contacts"
version = "0.0.1"
description = "Command line tool for managing contacts."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Zibing Zhang", email = "zibing.zha@gmail.com" }
]
dependencies = [
  "dataclasses-json==0.5.7",
  "jsondiff==2.0.0",
  "PyYAML==6.0",
  "requests==2.28.1",
]

[project.optional-dependencies]
dev = [
    "black==22.10.0",
    "flake8==5.0.4",
    "pyproject-flake8==5.0.4",
    "pytest==7.2.0",
    "isort==5.10.1",
]

[tool.flake8]
extend-ignore = "E203"
max-line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "./contacts"
]
