[project]
name = "contacts"
version = "0.0.1"
description = "Command line tool for managing contacts."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Zibing Zhang", email = "zibing.zha@gmail.com" }
]
dependencies = [
  "dataclasses-json==0.5.7",
  "jsondiff==2.0.0",
  "PyYAML==6.0",
  "requests==2.28.1",
]

[project.optional-dependencies]
dev = [
    "black==22.10.0",
    "flake8==5.0.4",
    "isort==5.10.1",
    "pyproject-flake8==5.0.4",
    "pytest==7.2.0",
    "types-PyYAML=6.0.12.2",
    "types-requests=2.28.11.7",
]

[tool.flake8]
extend-ignore = "E203"
max-line-length = 88
per-file-ignores = "__init__.py:F401"

[tool.isort]
profile = "black"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "./contacts"
]
